# Chess

./: Board.cpp  Board.hpp  CMakeLists.txt  Constants.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Point.cpp  Point.hpp  README.md  main.cpp
Pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
